# ai-side-projects-portfolio

./: README.md  pyproject.toml
churn-prediction/: README.md
churn-prediction/src/churn_prediction/: main.py
